--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^13.3.2",
+    "vue": "^3.3.4",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
